fixed some obscure css overlap stuff

--- a/client/src/Messages.css
+++ b/client/src/Messages.css
@@ -13,7 +13,7 @@
 }
 
 .user, .date {
-  font-size: 0.625rem;
+  font-size: 16px;
   color: #888888;
   font-size: 16px;
   min-width: 120px;
@@ -22,7 +22,7 @@
 
 .user {
   width: 30%;
-  margin-right: 0px;
+  margin-right: 20px;
 }
 
 .date {
@@ -34,7 +34,7 @@
 
 .message {
   /* flex-grow: 1; */
-  margin-right: -40px;
+  margin-right: -20px;
   font-size: 22px;
   width: 100%;
   /* min-width: 200px; */
@@ -60,6 +60,11 @@
     display: flex;
     justify-content: flex-end;
     width: 50px;
+  }
+
+  .user {
+    min-width: 70px;
+    margin-right: 40px;
   }
   
 }
